--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.2",
+    "cloudinary": "^1.17.0",
+    "cors": "^2.8.5",
+    "downloadjs": "^1.4.7",
+    "ffmpeg": "0.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-p5": "^1.1.8",
+    "react-p5-wrapper": "^2.0.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "recorderjs": "^1.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
+    "three": "^0.110.0",
+    "tone": "^13.8.25"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^7.1.2"
   }
 }
