--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-p5-wrapper": "^2.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "reactjs-popup": "^1.5.0",
     "recorderjs": "^1.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
